# CA_AE

./: ghc iM1 iHDL package base.txt
AE1/: TrafficLight.hs
CompSysCode/: status.txt
CompSysCode/CA_AE1/: Ct2b.hs  Ct2bRun.hs  SimpleCounter.hs  StatusReport.txt  TrafficLight.hs  TrafficLightRun.hs  TrafficLightv2.hs  def2.txt  definition.txt  hie.yaml  spRun.hs  testcmt.hs
CompSysCode/Circuits/: .ghci  .ghci~  CHANGELOG.md  Circuits.cabal  logCircuit.txt  logCircuitsAE.txt
CompSysCode/Circuits/HDL/: Hydra.hs
CompSysCode/Circuits/HDL/Hydra/Circuits/: Combinational.hs  RegFile.hs  Register.hs
CompSysCode/Circuits/HDL/Hydra/Core/: Driver.hs  HydraVersion.hs  RTL.hs  Signal.hs
CompSysCode/Circuits/M1/: ALU.hs  ALUrun.hs  Control.hs  Datapath.hs  Interface.hs  M1run.hs  System.hs  temp.txt
CompSysCode/Programs/Sigma16/Core/Simple/: ldxi.asm.txt  ldxi.obj.txt
